<resources>
    <string name="app_name">Moment</string>
    <string name="login_hint_1">Email</string>
    <string name="login_hint_2">Password</string>
    <string name="login">Log in</string>
    <string name="facebook_app_id">431501934386499</string>
    <string name="fb_login_protocol_scheme">fb431501934386499</string>
    <string name="or">OR</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="email_error">Fill email field with correct format!</string>
    <string name="password_error">Password minimum 7 characters!</string>
    <string name="login_not_found">Account not found</string>
    <string name="user_pref">user_pref</string>
    <string name="user_pass_pref">user_pass_pref</string>
    <string name="user_pref_key">user_pref_key</string>
    <string name="fb_logo">fb_logo</string>
    <string name="sign_up">Sign up</string>
    <string name="login_question">Already have an account? Login</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="liked">Liked</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="capture">capture</string>
    <string name="picture">picture</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="submit">submit</string>
    <string name="follow">follow</string>
    <string name="followed">followed</string>
    <string name="logout">logout</string>
    <string name="image">image</string>
    <string name="todo">TODO</string>
    <string name="pictures">Pictures</string>
    <string name="people">People</string>
    <string name="changes">Changes will be available when you launch the app again</string>
    <string name="my_story">My Story</string>
    <string name="add_story">Add Story</string>
    <string name="type_something">Type something..</string>
    <string name="nothing">nothing</string>
    <string name="empty_message">You can\'t send empty message</string>
    <string name="no_message">No Message</string>
    <string name="remember_me">Remember me</string>
</resources>
