<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.bluejack19_1.moment.LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:paddingStart="15dp"
        android:background="@drawable/text_input_border"
        android:hint="@string/login_hint_1"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="14dp"
        android:background="@drawable/text_input_border"
        android:hint="@string/login_hint_2"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        tools:ignore="RtlSymmetry"
        tools:layout_editor_absoluteX="0dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:alpha="0.5"
        android:background="@android:color/holo_blue_light"
        android:elevation="4dp"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        tools:layout_editor_absoluteX="-47dp" />

    <include
        android:id="@+id/facebook_login_button"
        layout="@layout/facebook_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:layout_editor_absoluteX="32dp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/facebook_login_button"
        tools:layout_editor_absoluteX="16dp" />

    <include
        android:id="@+id/text_separator_1"
        layout="@layout/text_with_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/google_login_button"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/register_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="16dp"
        android:text="@string/register_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_separator_1" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/register_question"
        app:layout_constraintTop_toBottomOf="@+id/text_separator_1" />

</androidx.constraintlayout.widget.ConstraintLayout>