<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f7"
    tools:context=".fragment.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_person_black_24dp"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="57dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:text="@string/posts"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/post_number" />

    <TextView
        android:id="@+id/follower_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="57dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/post_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/follower_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/followers"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/post_text"
        app:layout_constraintTop_toBottomOf="@+id/follower_number" />

    <TextView
        android:id="@+id/following_number"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="57dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/follower_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="30dp"
        android:text="@string/following"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/follower_text"
        app:layout_constraintTop_toBottomOf="@+id/following_number" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        tools:layout_editor_absoluteX="33dp" />

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/bordered_button"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/profile_description"
        tools:layout_editor_absoluteX="16dp" />

    <include
        layout="@layout/personal_pictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_button"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>